<resources>
    <string name="app_name">QueTalTuDía</string>
    <string name="action_settings">Settings</string>

    <!-- Título -->
    <string name="pregunta">🌞 ¿Qué tal fue tu día?</string>

    <!-- Respuestas -->
    <string name="respuesta1">😄 Excelente</string>
    <string name="respuesta2">🙂 Bueno</string>
    <string name="respuesta3">😕 Malo</string>
    <string name="respuesta4">😩 Pésimo</string>

    <!-- Botón -->
    <string name="btn_txt">Enviar</string>

    <!-- Mensajes finales -->
    <string name="msg_excelente">¡Qué buena noticia!</string>
    <string name="msg_bueno">¡Me alegro mucho!</string>
    <string name="msg_malo">Mañana será mejor.</string>
    <string name="msg_pesimo">¡Ánimo! Todo pasa.</string>
</resources>