<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textPregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <RadioButton
            android:id="@+id/rbExcelente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1"/>

        <RadioButton
            android:id="@+id/rbBueno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta2"/>

        <RadioButton
            android:id="@+id/rbMalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta3"/>

        <RadioButton
            android:id="@+id/rbPesimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta4"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>